# AiogramTemplate

./: .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.MD  README.md  config.yml  docker-compose.yml  init_locales.py  init_project.py  install.py  pyproject.toml  todo.md  todo.txt
.github/workflows/: demo.yml  deploy.yml
alembic/: env.py
helpers/: admins.py
helpers/apps/account_dispatcher/: __init__.py  base.py  client.py  dispatcher.py  manager.py  methods.py  observer.py  register.py  register_api.py
helpers/apps/chatgpt/: manager.py  model.py  sender.py
helpers/apps/chatgpt/dialog/: dialog.py  message.py
helpers/channel/: group.py
helpers/connect/: init.py
helpers/connect/src/: callback.py  conversation.ftl  filter.py  handler.py  kbs.py  model.py
helpers/date/: date_sequence.py
helpers/google/config/: actions.py  apps_script.gs  server.py  sheet.py  sheets.py
helpers/order/: order.py
helpers/pagination/: callback_data.py  kbs.py
modules/diffusion/: diffusion.py  manager.py
modules/diffusion/image_scale/: tesseract_rec.py
modules/diffusion/math_api/: mathpix.py
modules/diffusion/midjourney/: cache.py  midjourney.py  model.py  queue_manager.py  request.py  response.py
modules/diffusion/openai_gen/: models.py
modules/diffusion/openai_gen/chatgpt/: group_manager.py  model.py
modules/diffusion/replicate_gen/: base.py  models.py
project/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  config.yml  config_dev.yaml  docker-compose.yml
project/.github/workflows/: deploy.yml
project/alembic/: env.py
project/crying/: main.py  setup.py
project/crying/apps/jobs/: __init__.py  payment.py
project/crying/apps/merchant/: __init__.py  base.py  crypto_cloud.py  cryptocloud.py  cryptopay.py  group.py  qiwi.py  usdt.py  yookassa.py
project/crying/config/: __init__.py  cli.py  config.py  log.py  logg_settings.py  merchant.py  probe.py  settings.py  webhook.py  yookassa_models.py
project/crying/config/db/: __init__.py  base.py  postgres.py  postgresdb.py  sqlite.py  sqlitedb.py
project/crying/config/merchant/: __init__.py  base.py  crypto_cloud.py  qiwi.py  yookassa.py
project/crying/database/: __init__.py
project/crying/database/models/: __init__.py  base.py  user.py
project/crying/db/: __init__.py
project/crying/db/models/: __init__.py  base.py  invoice.py  subscription.py  user.py
project/crying/db/utils/: backup.py
project/crying/init/: __init__.py  commands.py  db.py  middlewares.py  routers.py  scheduler.py  translator.py  webhook.py
project/crying/locales/en/: common.ftl
project/crying/locales/ru/: common.ftl
project/crying/setup/: __init__.py  cli.py  db.py  log.py  scheduler.py  translator.py  webhook.py
project/crying/utils/: channel.py  combine.py  export.py  frl_translator.py  ftl_parser_cli.py  generate_callback.py  merchant.py  message.py  other.py  purchase.py  send_mail.py
project/scripts/: run.sh
scripts/: change_db_pass.sh  create_deploy_key.sh  create_run.sh  installing_dependencies.sh  kill_process.sh  pull_restart.sh  setup_docker.sh  to_one_file.py
scripts/deploy/: cli.py  deployer.py
scripts/deploy/scripts/: create_deploy_key.sh
src/: main.py
src/apps/bot/types/: user.py  (+1 more)
src/apps/jobs/: payment.py
src/apps/merchant/: __init__.py  base.py  cryptocloud.py  cryptomus.py  cryptopay.py  qiwi.py  stripe_merchant.py  usdt.py  wallet_pay.py  yookassa.py
src/apps/webadmin/: app.py  models.py
src/config/: __init__.py  consts.py  moderator.py  settings.py  webhook.py
src/config/db/: __init__.py  postgresdb.py  sqlitedb.py
src/db/models/: __init__.py
src/db/persistence_session/: base.py  manager.py  memory.py  redis.py  sqalchemy.py
src/locales/en/: common.ftl  conversation.ftl  payment.ftl
src/locales/ru/: common.ftl  conversation.ftl  language.ftl  payment.ftl
src/setup/: __init__.py  cli.py  commands.py  db.py  log.py  middlewares.py  opts.py  routers.py  scheduler.py  session_manager.py  support_connector.py  translator.py  webadmin.py  webhook.py
src/utils/: account.py  frl_translator.py  generate_callback.py  limiter.py  mailing.py  message.py  other.py  state.py  subscribe.py  support.py
(+160 files in other folders)
