[project]
name = "aiogramtemplate"
version = "0.1.0"
description = "Template for creating bots using the aiogram 3 library"
authors = [{ name = "taimast", email = "charlskenno@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvloop>=0.17.0 ; sys_platform != 'win32'",
    "aiogram>=3.15.0,<4",
    "pydantic>=2.7.1,<3",
    "loguru>=0.7.0",
    "PyYAML~=6.0",
    "APScheduler>=4.0.0a4,<5",
    "sqlalchemy>=2.0.9,<3",
    "aiosqlite>=0.19.0,<0.20",
    "pydantic-settings>=2.0.2,<3",
    "alembic>=1.13.0,<2",
    "cachetools>=5.3.2,<6",
    "requests>=2.31.0,<3",
    "bs4>=0.0.2,<0.0.3",
    "lxml>=5.1.0,<6",
    "sqladmin[full]>=0.18.0,<0.19",
    "fluentogram>=1.1.10",
    "aiohttp-socks>=0.9.0",
    "redis[hiredis]>=5.2.0,<6",
    "sqlmodel>=0.0.22",
    "aiocsv>=1.3.2,<2",
    "aiolimiter>=1.2.0,<2",
    "bidict>=0.23.1,<0.24",
    "psycopg2>=2.9.10",
    "ftl-translator",
    "multi-merchant",
]

[dependency-groups]
dev = [
    "watchdog>=2.3.0,<3.0.0",
    "sqlalchemy-utils>=0.41.1,<0.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["autoanswer"]

[tool.hatch.build.targets.wheel]
packages = ["autoanswer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
multi-merchant = { git = "https://github.com/taimast/multi-merchant.git", tag = "v1.7.0" }
ftl-translator = { git = "https://github.com/taimast/ftl-translator.git", tag = "v0.1.2" }
